# webui/src/lib/api/index.js
@@ -1271,7 +1271,7 @@ class Setup {
         }
     }
 
-    async lakeFS({ username, email, firstName, lastName, companyName, featureUpdates }) {
+    async lakeFS({ username, email, firstName, lastName, companyName, featureUpdates, country }) {
         const response = await apiRequest('/setup_lakefs', {
             method: 'POST',
             body: JSON.stringify({
@@ -1281,6 +1281,7 @@ class Setup {
                 lastName,
                 companyName,
                 featureUpdates,
+                country,
                 securityUpdates: false, // ignored
             }),
         });
@@ -1296,11 +1297,19 @@ class Setup {
         }
     }
 
-    async commPrefs({ email, firstName, lastName, companyName, featureUpdates }) {
+    async commPrefs({ email, firstName, lastName, companyName, featureUpdates, country }) {
         const response = await apiRequest('/setup_comm_prefs', {
             method: 'POST',
             // securityUpdates is ignored
-            body: JSON.stringify({ email, firstName, lastName, companyName, featureUpdates, securityUpdates: false }),
+            body: JSON.stringify({
+                email,
+                firstName,
+                lastName,
+                companyName,
+                featureUpdates,
+                country,
+                securityUpdates: false,
+            }),
         });
 
         switch (response.status) {
